--- a/_posts/2019-07-03-the-us-narrative-today.html
+++ b/_posts/2019-07-03-the-us-narrative-today.html
@@ -2642,107 +2642,107 @@ stories:
   domain: http://www.timeswv.com/
   link: https://www.timeswv.com/news/three-ways-inn-destroyed-by-fire/article_cdd89a9c-9d44-11e9-a1fb-07bad498312f.html
 images:
-- name: downtheline-downtheline-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-umberto-bocc.jpg
-- name: docks-docks-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-colored-circuits.jpg
-- name: store-on-corner-oldcabin-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-pond.jpg
-- name: oldtrain-oldtrain-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-emily-carr.jpg
-- name: amusement-park-amusement-park-2-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
-- name: rain-princess-DSC_0001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0001.jpg
-- name: birdhouse-birdhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kand-two.jpg
-- name: hollywood-building-hollywood-building-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-dali.jpg
-- name: old-door-lock-old-door-lock-2-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-smoking-cigarette.jpg
-- name: paris-paris-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-clean-view.jpg
-- name: carry-load-carryload-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
-- name: trucksilo-trucksilo-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sand-paper.jpg
-- name: trucksilo-trucksilo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
-- name: subway-subway-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-constitution.jpg
-- name: machine-road-machine-road-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-aqua.jpg
-- name: old-gas-pumps-oldgaspumps-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-really-hot.jpg
-- name: razorwire-DSC-0080-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-post-modern.jpg
-- name: long-factory-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-copper-circuit.jpg
+- name: dc-statue-dcstatue-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-umberto-bocc.jpg
+- name: crow-crow-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-deep-connections.jpg
+- name: fence-mexico-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sunday.jpg
+- name: downtown-trucksilo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
+- name: oldhouse-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-light-dali.jpg
+- name: miamibeach-miamibeach-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-internet-numbers.jpg
+- name: old-barn-old-barn-1500-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-electricity.jpg
+- name: miamibeach-miamibeach-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-dali.jpg
+- name: legal-statue-legalstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
 - name: christianity-christianity-under-construction-clean-view.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-clean-view.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-spagetti-accident.jpg
-- name: power-lines-power-lines-empty-space-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-blocks.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-dali.JPG
-- name: castle-wall-DSC-0067-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-rain.JPG
-- name: legal-statue-legalstatue-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-constitution.jpg
-- name: fence-mexico-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-diego-rivera1.jpg
-- name: powerlines-power-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-monet-one.jpg
-- name: mosaic-face-mosaic-face-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-yellow-collage.jpg
-- name: nyc-flag-nycflag-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-blocks.jpg
-- name: status-berlin-status-berlin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-graham-sutherland.jpg
-- name: berlinwall2-berlinwall-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-blue-brush.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-- name: old-door-lock-old-door-lock-2-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-far-away.jpg
-- name: dragon-desert-desert-dragon-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-smooth-ride.jpg
-- name: subway-subway-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-electricity.jpg
-- name: walled-garden-walled-garden-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kandinsky-bv.jpg
-- name: window-window-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smooth-ride.jpg
-- name: crow_blue_circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_circuit.jpg
-- name: ellis-island-ellis-island-room-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-matrix.jpg
-- name: oldbarn-oldbarn-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-internet-numbers.jpg
-- name: bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-01-17-38.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-green-zuma.jpg
-- name: crow_colorful_blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_blocks.jpg
-- name: old-church-oldchurch-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-ww2-dresden.jpg
-- name: nazi-invasion-downtown-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-building.jpg
-- name: old-school-house-old-schoolhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smoking-cigarette.jpg
-- name: ellis-island-ellisisland-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-spagetti-accident.jpg
-- name: crow_dark_soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_soul.jpg
-- name: white-house-lawn-white-house-window-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-collage.jpg
-- name: old-school-house-old-schoolhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-pond.jpg
-- name: docks-docks-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
+- name: razorcliff-razorcliff-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-bright-sand.jpg
+- name: docks-docks-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-collage.jpg
+- name: gypsy-wagon-gypsywagon-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-spagetti-accident.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
+- name: eduardo-eduardo-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-post-modern.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
+- name: razorcliff-razorcliff-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-sand-paper.jpg
+- name: old-school-house-old-schoolhouse-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-4.jpg
+- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
+- name: white-house-lawn-white-house-lawn-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
+- name: mistywoods-babyfoot-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-colorful-blocks.jpg
+- name: power-lines-power-lines-empty-space-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-constitution.jpg
+- name: udnie-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1184.jpg
+- name: stories-new-54-32-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-54-32-800-500-0-max-0--5--1.jpg
+- name: old-door-lock-old-door-lock-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit.jpg
+- name: powerlines-power-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dali-three.jpg
+- name: gypsymosaic-gypsy-eyes-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-satan-red.jpg
+- name: udnie-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0033.jpg
+- name: old-gas-pumps-oldgaspumps-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-light-dali.jpg
+- name: oldcabin-store-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-emily-carr.jpg
+- name: crow-crow-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-bright-sand.jpg
+- name: capital-battle-capitolbattle-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-green-zuma.jpg
+- name: nyc-flag-nycflag-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gan-vogh.jpg
+- name: oldhousecars-house-old-cars-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kand-two.jpg
+- name: window-window-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-electricity.jpg
+- name: downtown-trucksilo-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-wols.jpg
+- name: legal-statue-legalstatue-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-oily-mcoilface.jpg
+- name: fence-fence-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-light-dali.jpg
+- name: yosemite-yosemite-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colorful-blocks.jpg
+- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-blocks.png
+- name: beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-cinnamon-rolls.jpg
+- name: machine-road-machine-road-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-neo-instinct.jpg
+- name: hollywood-building-hollywood-building-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gred-mash.jpg
+- name: server-cloud-server-racks-clouds-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-alberto-giacometti.jpg
+- name: white-house-lawn-white-house-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
+- name: oldroad-old-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-missle.jpg
+- name: gypsy-wagon-gypsywagon-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-three.jpg
+- name: containership-containership-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
+- name: old-granary-field-granaryfield-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-dream.jpg
+- name: razorwire-DSC-0080-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-matrix.jpg
 ---
 Which July Fourth Tradition Is Your Favorite?.&nbsp;Motorcyclist IDd In Fatal Crash Near Yankton.&nbsp;Livingston Is A Quiet Composer In A Loud Brassy Band.&nbsp;Most 4th Of July Crashes Involve Alcohol.&nbsp;Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;YIIK Tried To Be A postmodern RPG, But Was Just A Frustrating Mess.&nbsp;Local Tone For Andover's Performances In The Park.&nbsp;City Council Approves Pay Raise At Work Session.&nbsp;
